[bdist_wheel]
python-tag = py3

[metadata]
name = moltx
version = attr: moltx._version.__version__
author = Michael Ding
author_email = yandy.ding@gmail.com
description = Molcule Transformer X Model
long_description = file: README.md
long_description_content_type = text/markdown
keywords = molcule, AI, deep learning, transformer
license_files =
    LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable

[options]
python_requires = >=3.8
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    tests*

[options.package_data]
moltx = data/*.json, data/*.txt
